Změna barev, favikona.

--- a/index.html
+++ b/index.html
@@ -6,71 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>TechSolutions, s.r.o.</title>
-    <style>
-        /* Resetování marginů a paddingu pro všechny elementy */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        header,
-        footer,
-        nav {
-            padding: 20px;
-        }
-
-        h1 {
-            color: white;
-        }
-
-        header {
-            text-align: center;
-            background-color: teal;
-        }
-
-        nav {
-            background-color: navy;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .navTlacitko {
-            padding: 20px;
-            background-color: blue;
-            color: white;
-            text-decoration: none;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        main {
-            flex: 1;
-        }
-
-        footer {
-            align-self: flex-end;
-            width: 100%;
-            text-align: center;
-            padding: 20px;
-            background-color: navy;
-            color: white;
-        }
-    </style>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 
-<!-- barevná paleta: https://colorhunt.co/palette/053b50176b8764ccc5eeeeee -->
+<!-- https://colorhunt.co/palette/352f445c5470b9b4c7faf0e6 -->
 
 <body>
 
@@ -79,13 +18,13 @@
     </header>
 
     <nav>
-        <a class="navTlacitko" href="#">Domů</a>
-        <a class="navTlacitko" href="#">O nás</a>
-        <a class="navTlacitko" href="#">Kontakt</a>
+        <a href="#">Domů</a>
+        <a href="#">O nás</a>
+        <a href="#">Kontakt</a>
     </nav>
 
     <main>
-        
+        <!-- obsah -->
     </main>
 
     <footer>
