Gradienty a změna barev.

--- a/index.html
+++ b/index.html
@@ -6,30 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>TechSolutions, s.r.o.</title>
+    <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 
-<!-- https://colorhunt.co/palette/352f445c5470b9b4c7faf0e6 -->
-
 <body>
-
     <header>
-        <h1>TechSolutions, s.r.o.</h1>
+        <h1>TechSolutions,
+            s.r.o.</h1>
     </header>
-
-    <nav>
-        <a href="#">Domů</a>
-        <a href="#">O nás</a>
-        <a href="#">Kontakt</a>
-    </nav>
-
+    <nav><a href="#">Domů</a><a href="#">O nás</a><a href="#">Kontakt</a></nav>
     <main>
         <!-- obsah -->
     </main>
-
     <footer>
-        <p>&copy; 2023 TechSolutions, s.r.o.</p>
-        <p>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</p>
+        <div class="footer-sloupec">
+            <p>&copy; 2023 TechSolutions, s.r.o.</p>
+            <p>Poslední aktualizace:</p>
+        </div>
+        <div class="footer-sloupec">
+            <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
+            <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
+        </div>
     </footer>
 
 </body>
