Ostatní stránky, oprava navigace.

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <main>
-        <h2>Domů</h2>
+        <h2>Kontakt</h2>
     </main>
     <footer>
         <div class="footer-sloupec">
