--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <main>
-        <h2>Domů</h2>
+        <h2>O nás</h2>
     </main>
     <footer>
         <div class="footer-sloupec">
