--- a/index.html
+++ b/index.html
@@ -11,25 +11,34 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <h1>TechSolutions,
             s.r.o.</h1>
     </header>
+    <!-- navigace -->
     <nav>
         <ul>
             <li><a href="index.html">Domů</a></li>
             <li><a href="about.html">O nás</a></li>
+            <li><a href="why.html">Proč my?</a></li>
             <li><a href="products.html">Produkty</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
+    <!-- obsah -->
     <main>
-        <h2>Domů</h2>
+        <!-- fotka -->
+        <div class="it">
+            <h2 class="splash">Váš spolehlivý partner už 20 let.</h2>
+        </div>
+        <!-- TODO úvod -->
     </main>
+    <!-- patička -->
     <footer>
         <div class="footer-sloupec">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
-            <p>Poslední aktualizace:</p>
+            <p>Poslední aktualizace: XXXX</p>
         </div>
         <div class="footer-sloupec">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
