--- a/services.html
+++ b/services.html
@@ -22,22 +22,22 @@
             <li><a href="index.html">Domů</a></li>
             <li><a href="about.html">O nás</a></li>
             <li><a href="why.html">Proč my?</a></li>
-            <li><a href="products.html">Produkty</a></li>
+            <li><a href="services.html">Služby</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
     <!-- obsah -->
     <main>
-        <h2>Produkty</h2>
+        <h2>Služby</h2>
         <!-- TODO tabulka -->
     </main>
     <!-- patička -->
     <footer>
-        <div class="footer-sloupec">
+        <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
             <p>Poslední aktualizace: XXXX</p>
         </div>
-        <div class="footer-sloupec">
+        <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
             <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
         </div>
