--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <li><a href="index.html">Domů</a></li>
             <li><a href="about.html">O nás</a></li>
             <li><a href="why.html">Proč my?</a></li>
-            <li><a href="products.html">Produkty</a></li>
+            <li><a href="services.html">Služby</a></li>
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
@@ -33,11 +33,11 @@
     </main>
     <!-- patička -->
     <footer>
-        <div class="footer-sloupec">
+        <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
             <p>Poslední aktualizace: XXXX</p>
         </div>
-        <div class="footer-sloupec">
+        <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
             <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
         </div>
