Oprava main prvku.

--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@
             <h3 class="textRight">Nabízíme špičkové IT konzultace, webhosting, správu sítí a mnoho dalšího. Více <a
                     href="services.html">Služby</a>.</h3>
         </div>
-        <!-- patička -->
-        <footer>
-            <div class="footer-column">
-                <p>&copy; 2023 TechSolutions, s.r.o.</p>
-                <p>Poslední aktualizace: XXXX</p>
-            </div>
-            <div class="footer-column">
-                <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
-                <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
-            </div>
-        </footer>
-
+    </main>
+    <!-- patička -->
+    <footer>
+        <div class="footer-column">
+            <p>&copy; 2023 TechSolutions, s.r.o.</p>
+            <p>Poslední aktualizace: XXXX</p>
+        </div>
+        <div class="footer-column">
+            <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
+            <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
+        </div>
+    </footer>
 </body>
 
 </html>
