--- a/why.html
+++ b/why.html
@@ -28,7 +28,7 @@
     </nav>
     <!-- obsah -->
     <main>
-        <div class="why">Proč právě my?</div>
+        <div class="title">Proč právě my?</div>
         <!-- flexbox -->
         <div class="flex-container">
             <!-- kartičky -->
