Úprava formuláře, HTML, CSS.

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <footer>
         <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
-            <p>Poslední aktualizace: XXXX</p>
+            <p>Poslední aktualizace: ####</p>
         </div>
         <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
