--- a/about.html
+++ b/about.html
@@ -28,14 +28,13 @@
     </nav>
     <!-- obsah -->
     <main>
-        <h2>O nás</h2>
-        <!-- TODO fotogalerie -->
+        <!-- TODO fotogalerie LightBox-->
     </main>
     <!-- patička -->
     <footer>
         <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
-            <p>Poslední aktualizace: XXXX</p>
+            <p>Poslední aktualizace: ####</p>
         </div>
         <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
