--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,13 @@
                 <div class="title2">Kontaktujte nás</div>
                 <form id="contactForm">
                     <label for="name">Jméno:</label>
-                    <input type="text" name="name" placeholder="Vaše jméno" required>
+                    <input type="text" id="name" name="name" placeholder="Vaše jméno" required>
                     <br><br>
                     <label for="email">E-mail:</label>
-                    <input type="email" name="email" placeholder="Váš e-mail" required>
+                    <input type="email" id="email" name="email" placeholder="Váš e-mail" required>
                     <br><br>
                     <label for="message">Zpráva:</label>
-                    <textarea name="message" placeholder="Vaše zpráva" required></textarea>
+                    <textarea id="message" name="message" placeholder="Vaše zpráva" required></textarea>
                     <br><br>
                     <button type="submit">Odeslat</button>
                   </form>
