Úprava HTML, zdroje.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>TechSolutions, s.r.o.</title>
+    <title>Domů | TechSolutions, s.r.o.</title>
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
@@ -76,6 +76,9 @@
         <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
             <p><strong>STUDENTSKÝ ZÁPOČTOVÝ PROJEKT</strong></p>
+        </div>
+        <div class="footer-column">
+            <a href="sources.html">Zdroje</a>
         </div>
     </footer>
 </body>
