--- a/services.html
+++ b/services.html
@@ -28,7 +28,44 @@
     </nav>
     <!-- obsah -->
     <main>
-        <!-- TODO tabulka -->
+        <div class="title">Služby</div>
+        <!-- tabulka -->
+        <div class="container">
+            <table>
+                <tr>
+                    <th>Služba</th>
+                    <th>Cena (měsíčně)</th>
+                </tr>
+                <tr>
+                    <td>VPS hosting (Virtual Private Server)</td>
+                    <td>Od 800 Kč</td>
+                </tr>
+                <tr>
+                    <td>Webhosting (sdílený hosting)</td>
+                    <td>Od 500 Kč</td>
+                </tr>
+                <tr>
+                    <td>Managed hosting serverů</td>
+                    <td>Od 1200 Kč</td>
+                </tr>
+                <tr>
+                    <td>Konzultace a analýza IT infrastruktury</td>
+                    <td>Od 1500 Kč</td>
+                </tr>
+                <tr>
+                    <td>Optimalizace a zabezpečení webových aplikací</td>
+                    <td>Od 1000 Kč</td>
+                </tr>
+                <tr>
+                    <td>Cloudové řešení pro podniky</td>
+                    <td>Od 1800 Kč</td>
+                </tr>
+                <tr>
+                    <td>24/7 zákaznická podpora</td>
+                    <td>Od 600 Kč</td>
+                </tr>
+            </table>
+        </div>
     </main>
     <!-- patička -->
     <footer>
