Datum a čas poslední aktualizace.

--- a/sources.html
+++ b/sources.html
@@ -8,6 +8,8 @@
     <title>Zroje | TechSolutions, s.r.o.</title>
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <!-- načtení skriptů po dokončení načítání stránky -->
+    <script src="lastModified.js" defer></script>
 </head>
 
 <body>
