--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <title>O nás | TechSolutions, s.r.o.</title>
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <!-- načtení skriptů po dokončení načítání stránky -->
+    <script src="lastModified.js" defer></script>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
     <footer>
         <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
-            <p>Poslední aktualizace: ####</p>
+            <p>Poslední aktualizace: <span id="lastModified"></span></p>
         </div>
         <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
