--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <title>Kontakt | TechSolutions, s.r.o.</title>
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <!-- načtení skriptů po dokončení načítání stránky -->
     <script src="form.js" defer></script>
+    <script src="lastModified.js" defer></script>
 </head>
 
 <body>
@@ -58,7 +60,7 @@
     <footer>
         <div class="footer-column">
             <p>&copy; 2023 TechSolutions, s.r.o.</p>
-            <p>Poslední aktualizace: ####</p>
+            <p>Poslední aktualizace: <span id="lastModified"></span></p>
         </div>
         <div class="footer-column">
             <p>Kontakt: <a href="mailto:razjo1@uhk.cz">razjo1@uhk.cz</a></p>
