--- a/sources.html
+++ b/sources.html
@@ -25,5 +25,13 @@
     <li>Manažerka: <a href="https://pixahive.com/photo/a-happy-manager-working-on-tablet/">https://pixahive.com/photo/a-happy-manager-working-on-tablet/</a></li>
     <li>Podání rukou: <a href="https://fellow.app/blog/management/new-manager-onboarding-checklist/">https://fellow.app/blog/management/new-manager-onboarding-checklist/</a></li>
 </ul>
+<h2>about.html</h2>
+<ul>
+    <li>Garážový startup: <a href="https://www.flickr.com/photos/jurvetson/6554034347">https://www.flickr.com/photos/jurvetson/6554034347</a></li>
+    <li>Spolupracovnci: <a href="https://pxhere.com/en/photo/1452237">https://pxhere.com/en/photo/1452237</a></li>
+    <li>Servery: <a href="https://www.sectorlink.com/article/empowering-artificial-intelligence-with-dedicated-servers"><https://www.sectorlink.com/article/empowering-artificial-intelligence-with-dedicated-servers/a></li>
+    <li>Digitální inovace: <a href="https://commons.wikimedia.org/wiki/File:Innovation_%26_Research_Symposium_Cisco_and_Ecole_Polytechnique_9-10_April_2018_Artificial_Intelligence_%26_Cybersecurity_%2840631791164%29.jpg">https://commons.wikimedia.org/wiki/File:Innovation_%26_Research_Symposium_Cisco_and_Ecole_Polytechnique_9-10_April_2018_Artificial_Intelligence_%26_Cybersecurity_%2840631791164%29.jpg</a></li>
+    <li>CEO: <a href="https://field.group/insight/field-is-the-name-of-europes-largest-geodata-collection-and-analysis-company/">https://field.group/insight/field-is-the-name-of-europes-largest-geodata-collection-and-analysis-company/</a></li>
+</ul>
 
 </html>
