--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- načtení skriptů po dokončení načítání stránky -->
-    <script src="lastModified.js" defer></script>
+    <script src="js/lastModified.js" defer></script>
     <!-- lightbox: https://github.com/lokesh/lightbox2/blob/dev/examples/index.html, https://cdnjs.com/libraries/lightbox2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
         integrity="sha512-Ixzuzfxv1EqafeQlTCufWfaC6ful6WFqIz4G+dWvK0beHw0NVJwvCKSgafpy5gwNqKmgUfIBraVwkKI+Cz0SEQ=="
@@ -21,7 +21,7 @@
         integrity="sha512-U9dKDqsXAE11UA9kZ0XKFyZ2gQCj+3AwZdBMni7yXSvWqLFEj8C1s7wRmWl9iyij8d5zb4wm56j4z/JVEwS77g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- zakázání scroolu při otevření obrázku -->
-    <script src="lightboxScroll.js"></script>
+    <script src="js/lightboxScroll.js"></script>
 </head>
 
 <body>
