--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- načtení skriptů po dokončení načítání stránky -->
-    <script src="lastModified.js" defer></script>
+    <script src="js/lastModified.js" defer></script>
 </head>
 
 <body>
