--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
     <!-- https://icons.getbootstrap.com/icons/pc-display/ -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <!-- načtení skriptů po dokončení načítání stránky -->
-    <script src="form.js" defer></script>
-    <script src="lastModified.js" defer></script>
+    <script src="js/form.js" defer></script>
+    <script src="js/lastModified.js" defer></script>
 </head>
 
 <body>
