--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
     <main>
         <div class="container2">
             <div class="box">
-                <div class="title2">Kde nás najdete</div>
+                <h2 class="title2">Kde nás najdete</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d202845.20094785866!2d-122.20590340845737!3d37.40268918143354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb68ad0cfc739%3A0x7eb356b66bd4b50e!2sSilicon%20Valley%2C%20Kalifornie%2C%20Spojen%C3%A9%20st%C3%A1ty%20americk%C3%A9!5e0!3m2!1scs!2scz!4v1696228848235!5m2!1scs!2scz"
                     allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" class="maps-iframe"></iframe>
             </div>
             <div class="box">
-                <div class="title2">Kontaktujte nás</div>
+                <h3 class="title2">Kontaktujte nás</h3>
                 <form id="contactForm">
                     <label for="name">Jméno:</label>
                     <input type="text" id="name" name="name" placeholder="Vaše jméno" required>
