--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
     </nav>
     <!-- obsah -->
     <main>
-        <div class="title">Služby</div>
+        <h2 class="title">Služby</h2>
         <!-- tabulka -->
         <div class="container">
             <table>
