--- a/sources.html
+++ b/sources.html
@@ -15,7 +15,7 @@
 <body>
 
 </body>
-<h1>Zdroje:</h1>
+<h1>Zdroje multimédií:</h1>
 <ul>
     <li>Ikona stránky: <a href="https://icons.getbootstrap.com/icons/pc-display/">https://icons.getbootstrap.com/icons/pc-display/</a></li>
 </ul>
