--- a/why.html
+++ b/why.html
@@ -30,7 +30,7 @@
     </nav>
     <!-- obsah -->
     <main>
-        <div class="title">Proč právě my?</div>
+        <h2 class="title">Proč právě my?</h2>
         <!-- flexbox -->
         <div class="flex-container">
             <!-- kartičky -->
