--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </nav>
     <!-- obsah -->
     <main>
-        <div class="title">O nás</div>
+        <h2 class="title">O nás</h2>
         <!-- fotogalerie LightBox a flexbox-->
         <div class="flex-container">
             <div class="item gallery-link">
